--- a/app/public/home.html
+++ b/app/public/home.html
@@ -21,7 +21,7 @@
       <br>
 
       <div class="text-center">
-        <a href="/servey"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Go to Survey</button></a>
+        <a href="/survey"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Go to Survey</button></a>
       </div>
 
     </div>
