fixed score bug

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -17,191 +17,164 @@
 
   <div class="container">
 
-    <!-- <div class="jumbotron">
-      <h1 class="text-center">
-        <span class="fa fa-fire"></span> Hot Restaurant</h1>
-      <hr>
-      <h2 class="text-center">Do </h2>
+    <h2>Survey Questions</h2>
+    <hr>
+    <div class="form-group">
+      <h2>About You</h2>
+      <label for="survey-name">Name(Required)</label>
       <br>
-      <div class="text-center">
-        <a href="/tables">
-          <button class="btn btn-lg btn-primary">
-            <span class="fa fa-list-alt"></span> View Tables</button>
-        </a>
-        <a href="/">
-          <button class="btn btn-lg btn-default">
-            <span class="fa fa-home"></span>
-          </button>
-        </a>
-      </div>
-    </div> -->
-    <!-- <div class="row">
-      <div class="col-lg-12"> -->
-        <!-- Reservation Page -->
-        <!-- <h4 class="card"> -->
-          <h1 class="card-header">
-            Survey Questions
-          </h1>
-          <!-- <h4 class="card-body">
-            <form role="form"> -->
-              <div class="form-group">
-                  <h2>About You</h2>
-                <label for="reserve-name">Name(Required)</label>
-                <input type="text" class="form-control" id="reserve-name">
-              </div>
-              <div class="form-group">
-                <label for="reserve-photo">Link to Photo Image(Required)</label>
-                <input type="text" class="form-control" id="reserve-photo">
-              </div>
-              <div class="survey-group">
-                <h2>Question 1</h2>
-                <h4>How do you like winter?</h4>
-                <h5>
-                  <select>
-                    <option default>Select an Option</option>
-                    <option value="1">1 (Strongly Disagree)</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5 (Strongly Agree)</option>
-                  </select>
-                </h5>
-                <br>
-                <h2>Question 2</h2>
-                <h4>Do you think ddrink a lot of water is good for your health?</h4>
-                
-                <h5>
-                <select>
-                  <option default>Select an Option</option>
-                  <option value="1">1 (Strongly Disagree)</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5 (Strongly Agree)</option>
-                </select>
-              </h5>
-                <br>
-                <h2>Question 3</h2>
-                <h4>Fried rice is one of the most popular Chinese food.</h4>
-                <h5>
-                <select>
-                  <option default>Select an Option</option>
-                  <option value="1">1 (Strongly Disagree)</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5 (Strongly Agree)</option>
-                </select>
-              </h5>
-              <br>
-                <h2>Question 4</h2>
-                <h4>Do you like eating chocolate?</h4>
-                <h5>
-                <select>
-                  <option default>Select an Option</option>
-                  <option value="1">1 (Strongly Disagree)</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5 (Strongly Agree)</option>
-                </select>
-              </h5>
-                <br>
-                <h2>Question 5</h2>
-                <h4>Will you choose to eat hotpot in winter?</h4>
-                <h5>
-                <select>
-                  <option default>Select an Option</option>
-                  <option value="1">1 (Strongly Disagree)</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5 (Strongly Agree)</option>
-                </select>
-              </h5>
-                <br>
-                <h2>Question 6</h2>
-                <h4>Enough sleeping hours is very important to people</h4>
-                <h5>
-                <select>
-                  <option default>Select an Option</option>
-                  <option value="1">1 (Strongly Disagree)</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5 (Strongly Agree)</option>
-                </select>
-              </h5>
-                <br>
-                <h2>Question 7</h2>
-                <h4>Dinner is the most important meal in a day.</h4>
-                <h5>
-                <select>
-                  <option default>Select an Option</option>
-                  <option value="1">1 (Strongly Disagree)</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5 (Strongly Agree)</option>
-                </select>
-              </h5>
-                <br>
-                <h2>Question 8</h2>
-                <h4>Breakfast is the most important meal in a day.</h4>
-                <h5>
-                <select>
-                  <option default>Select an Option</option>
-                  <option value="1">1 (Strongly Disagree)</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5 (Strongly Agree)</option>
-                </select>
-              </h5>
-                <br>
-                <h2>Question 9</h2>
-                <h4>Will you go beach this weekend?</h4>
-                <h5>
-                <select>
-                  <option default>Select an Option</option>
-                  <option value="1">1 (Strongly Disagree)</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5 (Strongly Agree)</option>
-                </select>
-              </h5>
-                <br>
-                <h2>Question 10</h2>
-                <h4>Peanuts are good for our health.</h4>
-                <h5>
-                <select>
-                  <option default>Select an Option</option>
-                  <option value="1">1 (Strongly Disagree)</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5 (Strongly Agree)</option>
-                </select>
-              </h5>
-                </div>
-                <br>
-              
-              <button type="button" class="btn btn-primary btn-lg btn-block">Submit</button>
-            </form>
-          </div>
-        </div>
-      </div>
+      <input type="text" placeholder="Your name" id="reserve-name">
     </div>
+    <label for="survey-url">Link to Photo Image (Required)</label>
+    <br>
+    <input type="url" name="url" id="url" placeholder="https://example.com" pattern="https://.*" size="30" required>
+    <hr>
+    <div class="survey-group">
+      <h2>Question 1</h2>
+      <h4>How do you like winter?</h4>
+      <h5>
+        <select class="selectScore" id="q1">
+          <option default>Select an Option</option>
+          <option value="1">1 (Strongly Disagree)</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 (Strongly Agree)</option>
+        </select>
+      </h5>
+      <br>
+      <h2>Question 2</h2>
+      <h4>Do you think ddrink a lot of water is good for your health?</h4>
+
+      <h5>
+        <select class="selectScore" id="q2">
+          <option default>Select an Option</option>
+          <option value="1">1 (Strongly Disagree)</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 (Strongly Agree)</option>
+        </select>
+      </h5>
+      <br>
+      <h2>Question 3</h2>
+      <h4>Fried rice is one of the most popular Chinese food.</h4>
+      <h5>
+        <select class="selectScore" id="q3">
+          <option default>Select an Option</option>
+          <option value="1">1 (Strongly Disagree)</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 (Strongly Agree)</option>
+        </select>
+      </h5>
+      <br>
+      <h2>Question 4</h2>
+      <h4>Do you like eating chocolate?</h4>
+      <h5>
+        <select class="selectScore" id="q4">
+          <option default>Select an Option</option>
+          <option value="1">1 (Strongly Disagree)</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 (Strongly Agree)</option>
+        </select>
+      </h5>
+      <br>
+      <h2>Question 5</h2>
+      <h4>Will you choose to eat hotpot in winter?</h4>
+      <h5>
+        <select class="selectScore" id="q5">
+          <option default>Select an Option</option>
+          <option value="1">1 (Strongly Disagree)</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 (Strongly Agree)</option>
+        </select>
+      </h5>
+      <br>
+      <h2>Question 6</h2>
+      <h4>Enough sleeping hours is very important to people</h4>
+      <h5>
+        <select class="selectScore" id="q6">
+          <option default>Select an Option</option>
+          <option value="1">1 (Strongly Disagree)</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 (Strongly Agree)</option>
+        </select>
+      </h5>
+      <br>
+      <h2>Question 7</h2>
+      <h4>Dinner is the most important meal in a day.</h4>
+      <h5>
+        <select class="selectScore" id="q7">
+          <option default>Select an Option</option>
+          <option value="1">1 (Strongly Disagree)</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 (Strongly Agree)</option>
+        </select>
+      </h5>
+      <br>
+      <h2>Question 8</h2>
+      <h4>Breakfast is the most important meal in a day.</h4>
+      <h5>
+        <select class="selectScore" id="q8">
+          <option default>Select an Option</option>
+          <option value="1">1 (Strongly Disagree)</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 (Strongly Agree)</option>
+        </select>
+      </h5>
+      <br>
+      <h2>Question 9</h2>
+      <h4>Will you go beach this weekend?</h4>
+      <h5>
+        <select class="selectScore" id="q9">
+          <option default>Select an Option</option>
+          <option value="1">1 (Strongly Disagree)</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 (Strongly Agree)</option>
+        </select>
+      </h5>
+      <br>
+      <h2>Question 10</h2>
+      <h4>Peanuts are good for our health.</h4>
+      <h5>
+        <select class="selectScore" id="q10">
+          <option default>Select an Option</option>
+          <option value="1">1 (Strongly Disagree)</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 (Strongly Agree)</option>
+        </select>
+      </h5>
+    </div>
+    <br>
+
+    <button type="submit" class="btn btn-primary btn-lg btn-block submit">Submit</button>
+
+  </div>
 
 
-    <footer class="footer">
-      <div class="container">
-        <p>
-          <a href="/api/friends">API Friends Link</a> |
-          <a href="#">Github Repo</a>
-      </div>
-    </footer>
+  <footer class="footer">
+    <div class="container">
+      <p>
+        <a href="/api/friends">API Friends Link</a> |
+        <a href="#">Github Repo</a>
+    </div>
+  </footer>
 
   </div>
 
@@ -218,22 +191,33 @@
 
   $(".submit").on("click", function(event) {
     event.preventDefault();
-
+    //var selectElement = document.getElementsByClassName("selectScore")
     // Here we grab the form elements
     var newSurvey = {
       friendsName: $("#reserve-name").val().trim(),
-      friendsPhoto: $("#reserve-phone").val().trim(),
-      friendsScore: $("#reserve-email").val().trim()
+      friendsPhoto: $("#reserve-phone").val(),
+      friendsScore: [
+        $("#q1").val()[0].trim(),
+        $("#q2").val()[0].trim(),
+        $("#q3").val()[0].trim(),
+        $("#q4").val()[0].trim(),
+        $("#q5").val()[0].trim(),
+        $("#q6").val()[0].trim(),
+        $("#q7").val()[0].trim(),
+        $("#q8").val()[0].trim(),
+        $("#q9").val()[0].trim(),
+        $("#q10").val()[0].trim()
+      ]
     };
 
-    console.log(newReservation);
+    console.log(newSurvey);
 
     // This line is the magic. It"s very similar to the standard ajax function we used.
     // Essentially we give it a URL, we give it the object we want to send, then we have a "callback".
     // The callback is the response of the server. In our case, we set up code in api-routes that "returns" true or false
     // depending on if a tables is available or not.
 
-    $.post("/api/tables", newReservation,
+    $.post("/api/friends", newSurvey,
       function(data) {
 
         // If a table is available... tell user they are booked.
@@ -247,10 +231,9 @@
         }
 
         // Clear the form when submitting
-        $("#reserve-name").val("");
-        $("#reserve-phone").val("");
-        $("#reserve-email").val("");
-        $("#reserve-unique-id").val("");
+        $("#survey-name").val("");
+        $("#survey-url").val("");
+        $("#selectScore").val("");
 
       });
 
