update matching friends

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -222,7 +222,7 @@
 
         // If a table is available... tell user they are booked.
         if (data) {
-          alert("Yay! You are officially booked!");
+          alert("Your best friend match" + friendsData[mostMatchIndex]);
         }
 
         // If a table is available... tell user they on the waiting list.
