update empty option value and add more friends

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -252,7 +252,7 @@
         // Clear the form when submitting
         $("#survey-name").val("");
         $("#survey-url").val("");
-        $("#selectScore").val("");
+        $(".selectScore").val("Select an Option");
 
       });
 
