update style for public html

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -7,28 +7,28 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <script src="https://kit.fontawesome.com/78df251e9f.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body style = "background-color: #D65A50;">
 
-  <div class="container">
+  <div class="container" style = "background-color: #D65A50;">
 
-    <div class="jumbotron">
-      <h1 class="text-center"><span class="fa fa-fire"></span> Friend Friender </h1>
+    <div class="jumbotron" style = "background-color: #D65A50; align-content: center;">
+      <h1 class="text-center" style = "color: white;"><span class="fas fa-users"></span>  Friend Finder</h1>
       <hr>
-      <h2 class="text-center">Answer a few basic questions.</h2>
-      <h2 class="text-center">Then find the friend with the greatest compatibility!</h2>
+      <h2 class="text-center" style = "color: white;">Answer a few basic questions.</h2>
+      <h2 class="text-center" style = "color: white;">Then find the friend with the greatest compatibility!</h2>
       <br>
 
       <div class="text-center">
-        <a href="/survey"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Go to Survey</button></a>
+        <a href="/survey"><button class="btn btn-lg" style = "background-color: #CADBAE; color: black;"><span class="fas fa-forward"></span> Go to Survey</button></a>
       </div>
 
     </div>
 
-    <footer class="footer">
+    <footer class="footer" style = "font-size: 20px; font-weight: bold; color: white;">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="#">Github Repo</a>
+        <p style = "font-size: 20px; font-weight: bold; color: white;"><a href="/api/friends" style = "font-size: 20px; font-weight: bold; color: white;">API Friends List</a> | <a href="#" style = "font-size: 20px; font-weight: bold; color: white;">Github Repo</a>
       </div>
     </footer>
 
