update font size

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -34,7 +34,7 @@
     <div class="survey-group">
       <p style = "font-size: 25px;">Question 1</p>
       <p style = "font-size: 20px;">How do you like winter?</p>
-      <p style = "font-size: 20px;">
+      <h6>
         <select class="selectScore" id="q1">
           <option default>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
@@ -43,12 +43,12 @@
           <option value="4">4</option>
           <option value="5">5 (Strongly Agree)</option>
         </select>
-      </p>
+      </h6>
       <br>
       <p style = "font-size: 25px;">Question 2</p>
       <p style = "font-size: 20px;">Do you think ddrink a lot of water is good for your health?</p>
 
-      <p>
+      <h6>
         <select class="selectScore" id="q2">
           <option default>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
@@ -57,11 +57,11 @@
           <option value="4">4</option>
           <option value="5">5 (Strongly Agree)</option>
         </select>
-      </p>
+      </h6>
       <br>
       <p style = "font-size: 25px;">Question 3</p>
       <p style = "font-size: 20px;">Fried rice is one of the most popular Chinese food.</p>
-      <p style = "font-size: 20px;">
+      <h6>
         <select class="selectScore" id="q3">
           <option default>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
@@ -70,11 +70,11 @@
           <option value="4">4</option>
           <option value="5">5 (Strongly Agree)</option>
         </select>
-      </p>
+      </h6>
       <br>
       <p style = "font-size: 25px;">Question 4</p>
       <p style = "font-size: 20px;">Do you like eating chocolate?</p>
-      <p style = "font-size: 20px;">
+      <h6>
         <select class="selectScore" id="q4">
           <option default>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
@@ -83,11 +83,11 @@
           <option value="4">4</option>
           <option value="5">5 (Strongly Agree)</option>
         </select>
-      </p>
+      </h6>
       <br>
       <p style = "font-size: 25px;">Question 5</p>
       <p style = "font-size: 20px;">Will you choose to eat hotpot in winter?</p>
-      <p style = "font-size: 20px;">
+      <h6>
         <select class="selectScore" id="q5">
           <option default>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
@@ -96,11 +96,11 @@
           <option value="4">4</option>
           <option value="5">5 (Strongly Agree)</option>
         </select>
-      </p>
+      </h6>
       <br>
       <p style = "font-size: 25px;">Question 6</p>
       <p style = "font-size: 20px;">Enough sleeping hours is very important to people</p>
-      <p style = "font-size: 20px;">
+      <h6>
         <select class="selectScore" id="q6">
           <option default>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
@@ -109,11 +109,11 @@
           <option value="4">4</option>
           <option value="5">5 (Strongly Agree)</option>
         </select>
-      </p>
+      </h6>
       <br>
       <p style = "font-size: 25px;">Question 7</p>
       <p style = "font-size: 20px;">Dinner is the most important meal in a day.</p>
-      <p style = "font-size: 20px;">
+      <h6>
         <select class="selectScore" id="q7">
           <option default>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
@@ -122,11 +122,11 @@
           <option value="4">4</option>
           <option value="5">5 (Strongly Agree)</option>
         </select>
-      </p>
+      </h6>
       <br>
       <p style = "font-size: 25px;">Question 8</p>
       <p style = "font-size: 20px;">Breakfast is the most important meal in a day.</p>
-      <p>
+      <h6>
         <select class="selectScore" id="q8">
           <option default>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
@@ -135,11 +135,11 @@
           <option value="4">4</option>
           <option value="5">5 (Strongly Agree)</option>
         </select>
-      </p>
+      </h6>
       <br>
       <p style = "font-size: 25px;">Question 9</p>
       <p style = "font-size: 20px;">Will you go beach this weekend?</p>
-      <p style = "font-size: 20px;">
+      <h6>
         <select class="selectScore" id="q9">
           <option default>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
@@ -148,11 +148,11 @@
           <option value="4">4</option>
           <option value="5">5 (Strongly Agree)</option>
         </select>
-      </p>
+      </h6>
       <br>
       <p style = "font-size: 25px;">Question 10</p>
-      <h4>Peanuts are good for our health.</h4>
-      <h5>
+      <p style = "font-size: 20px;">Peanuts are good for our health.</p>
+      <h6>
         <select class="selectScore" id="q10">
           <option default>Select an Option</option>
           <option value="1">1 (Strongly Disagree)</option>
@@ -161,7 +161,7 @@
           <option value="4">4</option>
           <option value="5">5 (Strongly Agree)</option>
         </select>
-      </h5>
+      </h6>
     </div>
     <br>
 
