--- a/app/public/home.html
+++ b/app/public/home.html
@@ -28,7 +28,7 @@
 
     <footer class="footer" style = "font-size: 20px; font-weight: bold; color: white;">
       <div class="container">
-        <p style = "font-size: 20px; font-weight: bold; color: white;"><a href="/api/friends" style = "font-size: 20px; font-weight: bold; color: white;">API Friends List</a> | <a href="#" style = "font-size: 20px; font-weight: bold; color: white;">Github Repo</a>
+        <p style = "font-size: 20px; font-weight: bold; color: white;"><a href="/api/friends" style = "font-size: 20px; font-weight: bold; color: white;">API Friends List</a> | <a href="https://github.com/littlefish-tech/FriendFinder" style = "font-size: 20px; font-weight: bold; color: white;">Github Repo</a>
       </div>
     </footer>
 
