update small errors

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -49,7 +49,7 @@
       </h6>
       <br>
       <!-- <p style = "font-size: 25px;">Question 2</p> -->
-      <p style = "font-size: 20px;">Q2. Do you think ddrink a lot of water is good for your health?</p>
+      <p style = "font-size: 20px;">Q2. Do you think drink a lot of water is good for your health?</p>
 
       <h6>
         <select class="selectScore" id="q2">
